--- a/style.css
+++ b/style.css
@@ -531,7 +531,6 @@ body footer #link-home:hover {
 }
 
 body footer #link-work {
-  position: absolute;
   -webkit-clip-path: polygon(81% 20%, 100% 50%, 82% 79%, 0 78%, 0 50%, 0 23%);
           clip-path: polygon(81% 20%, 100% 50%, 82% 79%, 0 78%, 0 50%, 0 23%);
   background-color: #F2CC34;
@@ -574,7 +573,7 @@ body footer #link-work:hover {
     margin-top: 12rem;
   }
   body #about {
-    margin-top: 3rem;
+    margin-top: 1rem;
     padding-bottom: 2rem;
     background-color: #0E1A06;
     display: -webkit-box;
@@ -589,13 +588,14 @@ body footer #link-work:hover {
             align-items: center;
   }
   body #about .label p {
-    padding: 2rem;
-    font-size: 1.5rem;
+    padding: 1rem;
+    font-size: 1rem;
   }
   body #about #about-wrapper {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -606,6 +606,9 @@ body footer #link-work:hover {
   body #about #about-wrapper #about-text-wrapper {
     width: 90%;
     padding: 0 1rem;
+  }
+  body #about #about-wrapper #about-text-wrapper p {
+    font-size: 0.8rem;
   }
   body #work {
     display: -ms-grid;
@@ -745,23 +748,13 @@ body footer #link-work:hover {
   body footer div a:active {
     color: #E97E94;
   }
-  body footer #link-home {
+  body footer #link-home, body footer #link-work {
     padding: 1rem;
     font-size: 1rem;
     margin-right: 5rem;
     text-align: center;
   }
-  body footer #link-home:active {
-    background-color: #7F8D5C;
-    color: #F2CC34;
-  }
-  body footer #link-work {
-    padding: 1rem;
-    font-size: 1rem;
-    margin-left: 5rem;
-    text-align: center;
-  }
-  body footer #link-work:active {
+  body footer #link-home:active, body footer #link-work:active {
     background-color: #7F8D5C;
     color: #F2CC34;
   }
