--- a/style.scss
+++ b/style.scss
@@ -36,7 +36,6 @@ body {
                     list-style: none;
                     font-size: 1.5rem;
                     text-transform: uppercase;
-                    
 
                     a {
                         text-decoration: none;
@@ -47,7 +46,6 @@ body {
                             font-size: 2rem;
                             clip-path: polygon(0 0, 100% 0, 90% 100%, 0 90%);
                         }
-                    
                     }
                 }
             }
@@ -60,9 +58,8 @@ body {
                 position: relative;
                 margin-top: 25rem; 
             }
-
-            
         }
+
         #hero-img {
             width: 100%;
             height: 100vh;
@@ -77,23 +74,21 @@ body {
         display: flex;
         flex-direction: column;
         align-items: center;
-        
 
-        .label{
+        .label {
             width: 70%;
             text-align: center;
             align-content: center;
             background-color: $pink-color;
             transform: translateY(-75%);   
 
-                p{
-                    padding: 1rem;
-                    color: $green-color;
-                    font-size: 3rem;
-                }
-                
-                
+            p{
+                padding: 1rem;
+                color: $green-color;
+                font-size: 3rem;
+            } 
         }
+
         #about-wrapper {
             display: flex;
             align-items: center;
@@ -108,6 +103,7 @@ body {
                     background-color: $green-light-color;
                 }
             }
+
             #about-text-wrapper {
                 width: 75%;
                 padding: 0 2rem;
@@ -281,7 +277,6 @@ body {
                         color: $blue-color;
                     }
                 }
-            
             }
 
             #modal-close {     
@@ -301,6 +296,7 @@ body {
                 }
             }
         }
+
         @keyframes modalopen {
             from {opacity: 0}
             to {opacity: 1}
@@ -340,7 +336,6 @@ body {
         }
 
         #link-home {
-            //position: absolute;
             clip-path: polygon(100% 12%, 100% 30%, 100% 70%, 15% 72%, 0% 50%, 18% 30%);
             background-color: $yellow-color;
             margin-left: 3rem;
@@ -353,7 +348,6 @@ body {
         }
 
         #link-work{
-            position: absolute;
             clip-path: polygon(81% 20%, 100% 50%, 82% 79%, 0 78%, 0 50%, 0 23%);
             background-color: $yellow-color;
             margin-right: 3rem;
@@ -399,18 +393,17 @@ body {
         }
 
         #about {
-            margin-top: 3rem;
+            margin-top: 1rem;
             padding-bottom: 2rem;
             background-color: $green-color;
             display: flex;
             flex-direction: column;
             align-items: center;
             
-
-            .label{p{padding: 2rem; font-size: 1.5rem;}}
+            .label{p {padding: 1rem; font-size: 1rem;}}
 
             #about-wrapper {
-                display: flex;
+                flex-direction: column;
                 align-items: center;
                 
                 #about-img-wrapper {#img-about-1 {display: none;}}
@@ -418,6 +411,7 @@ body {
                 #about-text-wrapper {
                     width: 90%;
                     padding: 0 1rem;
+                    p{font-size: 0.8rem;}
                 }
             }
         }
@@ -486,7 +480,7 @@ body {
                 }
             }
             
-            #link-home {
+            #link-home, #link-work {
                 padding: 1rem;
                 font-size: 1rem;
                 margin-right: 5rem;
@@ -494,13 +488,13 @@ body {
                 &:active {background-color: $green-light-color; color: $yellow-color;}
             }
 
-            #link-work{
-                padding: 1rem;
-                font-size: 1rem;
-                margin-left: 5rem;
-                text-align: center;
-                &:active {background-color: $green-light-color; color: $yellow-color;}
-            }
+            // #link-work{
+            //     padding: 1rem;
+            //     font-size: 1rem;
+            //     margin-left: 5rem;
+            //     text-align: center;
+            //     &:active {background-color: $green-light-color; color: $yellow-color;}
+            // }
         }
     }
 }
